--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.2.*",
+        "guzzlehttp/guzzle": "~6.0",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
