Switch to a little SQLite database to store quotes

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomKey!!!
-VERIFY_TOKEN=awesomelySecretVerifyToken1
+VERIFY_TOKEN=VERIFY_TOKEN_HERE
+PAGE_ACCESS_TOKEN=PAGE_ACCESS_TOKEN_HERE
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+DB_DATABASE=/home/vagrant/Code/Project/database/db.sqlite
 
 CACHE_DRIVER=memcached
 QUEUE_DRIVER=sync
